--- a/style.css
+++ b/style.css
@@ -110,11 +110,11 @@ button:hover {
 }
 
 .player1 {
-  background-color: #f87272;
+  background-color: #958BBE;
 }
 
 .player2 {
-  background-color: #003f5c;
+  background-color: #004f74;
 }
 
 .loser {
