--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ button:hover {
   flex-direction: column;
   gap: 1rem;
   padding: 2rem;
-  background-color: #fef0df;
+  background-color: #f9e2c6;
   border-radius: 1rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   max-width: 350px;
@@ -235,7 +235,10 @@ option {
   color: #fef9f3;
   border-radius: 5px;
   background-color: #444;
+  text-align: center;
+  text-align-last: center;
 }
+
 
 /* === Who Goes First Section === */
 #first-move-label {
