--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ button:hover {
   flex-direction: column;
   gap: 1rem;
   padding: 2rem;
-  background-color: #f9e2c6;
+  background-color: #ffd39d;
   border-radius: 1rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   max-width: 300px;
