--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ select#game-mode {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transform: scale(1.1);
+  transform: scale(1.2);
   transform-origin: top center;
   width: 100%;
 }
@@ -230,6 +230,7 @@ button:hover {
   max-width: 320px;
   width: 90%;
   margin: 2rem auto 0 auto; /* centered horizontally */
+  margin-top: 0.5rem;
   text-align: center;
   font-size: 1.05rem;
   align-items: center;
