--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* === Global Styles === */
 body {
   margin: 0;
   padding: 0;
@@ -457,9 +458,14 @@ option {
   .setup-screen {
     margin-top: 2rem;
     padding: 1.5rem;
-    width: 100%;
+    width: calc(100% - 5rem);
     max-width: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
   }
+
 
   .setup-screen input,
   .setup-screen select {
